--- a/image.html
+++ b/image.html
@@ -9,5 +9,20 @@
     <h1>Welcome to codingal</h1>
     <img src="codingal_logo.jpeg" alt="codingalimage" width="400" height="400">
     
+
+    <h1>This is my favourite song</h1>
+
+    <audio controls autoplay>
+        <source src="sample.mp3" type="audio/mpeg">
+        Your browser does not support this file
+
+    </audio>
+
+
+    <video width="400" height="400" controls autoplay loop>
+        <source src="video.mp4" type="video/mp4">
+        Your brouwser does not support this file
+    </video>
+
 </body>
 </html>
