--- a/styling.html
+++ b/styling.html
@@ -4,40 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-   <style>
-    h2{
-        color: green;
+
+    <style type="text/css">
+
+    .example1{
+        width: 220px;
+        background-color: yellow;
+        padding: 0px;
+        border: 0px;
+        margin: 0px;
     }
-   </style>
-  
+
+    .example2{
+        width: 220px;
+        background-color: green;
+        padding: 50px;
+        border: 5px solid black; 
+        margin: 40px 20px;
+    }
+
+    hr{
+        background-color: red;
+    }
+    </style>
+
+
 </head>
 <body>
-    <hr>
-    <!--inline css-->
-    <h1 style="color: red;">inline css example</h1>
-    
-    <h2>internal css example</h2>
-
-    <h3>external css example</h3>
+    <h1>model example</h1>
 
     <hr>
 
+    <p class="example1">my content example 1</p>
+ <hr style="width: 10%;height: 10px;color: blue;">
+ <p class="example2">my content 2</p>
+ <hr style="width: 200%;height: 1px;color: blue;>
 
-    <h4>elemental selector example</h4>
-    <h4>elemental selector example</h4>
-
-<hr>
-
-
-<h2 class="myclass">class selector example</h2>
-<h2 id="myid">id selector example</h2>
-<h2 class="myclass">class selector example</h2>
-
-<hr>
-
-<h5>group selector example</h5>
-<p>group selector example</p>
-<hr>
 </body>
 </html>
