--- a/cards.html
+++ b/cards.html
@@ -20,6 +20,10 @@
             <a href="#" class="btn-btn-info">know more!</a>
         </div>
 
+        <div class="container">
+            <div class="spinner-border"></div>
+        </div>
+
         <ul class="pagination">
             <li class="page-item">
                 <a class="page-link" href="#">previous</a>
