--- a/index.html
+++ b/index.html
@@ -4,21 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link
+
+href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;700;800&family=Roboto+Slab:wght@200;400;600;900&display=swap"
+
+rel="stylesheet" />
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1 id="myH"></h1>
-   <p id="myP"></p>
+
+    <div class="container navigation pt-3">
+
+        <div class="row">
+
+            <div class="col-md-6 col-6 d-flex align-items-center">
+                <i class="fa fa-code text-warning fa-lg"></i>
+                <h5 class="text-white pl-2 mb-0">CODINGAL</h5>
+            </div>
+            
+            <div class="col-md-6 col-6 d-flex justify-content-end">
+                <div class="nav-links d-flex align-items-center">
+                    <a href="#" class="navigation-link">about</a>
+                    <a href="#" class="navigation-link">projects</a>
+                    <a href="#" class="navigation-link">social media</a>
+                    <a href="#" class="navigation-link">resume</a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    
 </body>
-
-
-<script>
-
-    //This is fo header
-    document.getElementById("myH").innerHTML="javascript comments"
-
-    var num1 = 5
-    var num2 = 6
-    var sum = num1 + num2
-    document.getElementById("myP").innerHTML="The total sum is" + sum
-</script>
 </html>
