--- a/index.html
+++ b/index.html
@@ -1,42 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link
 
-href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;700;800&family=Roboto+Slab:wght@200;400;600;900&display=swap"
-
-rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://kit.fontawesome.com/996973c893.js"></script>
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;700;800&family=Roboto+Slab:wght@200;400;600;900&display=swap"
+        rel="stylesheet" />
+
 </head>
+
 <body>
 
-    <div class="container navigation pt-3">
 
-        <div class="row">
+    <div id="social-media" class="container-fluid">
 
-            <div class="col-md-6 col-6 d-flex align-items-center">
-                <i class="fa fa-code text-warning fa-lg"></i>
-                <h5 class="text-white pl-2 mb-0">CODINGAL</h5>
-            </div>
-            
-            <div class="col-md-6 col-6 d-flex justify-content-end">
-                <div class="nav-links d-flex align-items-center">
-                    <a href="#" class="navigation-link">about</a>
-                    <a href="#" class="navigation-link">projects</a>
-                    <a href="#" class="navigation-link">social media</a>
-                    <a href="#" class="navigation-link">resume</a>
+        <div class="container text-white py-5">
+
+            <h4 class="text-warning">Social Media</h4>
+
+            <h1 class="m-heading">Let's be friends</h1>
+
+
+            <div class="row pt-5">
+
+                <div class="col-3 media_link btn">
+
+
+                    <div class="row">
+
+                        <div class="col-6 d-flex justify-content-start">
+
+                            <h3 class="m-0 pt-2 text-white">LinkedIn</h3>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end align-items-center">
+
+                            <i class="fab fa-linkedin-in fa-2x text-secondary"></i>
+                        </div>
+
+                    </div>
+
+
                 </div>
+                <div class="col-3 media_link btn">
+
+                    <div class="row">
+
+                        <div class="col-6 d-flex justify-content-start">
+
+                            <h3 class="m-0 pt-2 text-white">Github</h3>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end align-items-center">
+
+                            <i class="fab fa-github fa-2x text-secondary"></i>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="col-3 media_link btn">
+
+                    <div class="row">
+
+                        <div class="col-6 d-flex justify-content-start">
+
+                            <h3 class="m-0 pt-2 text-white">Youtube</h3>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end align-items-center">
+
+                            <i class="fab fa-youtube fa-2x text-secondary"></i>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-3 media_link btn">
+
+                    <div class="row">
+
+                        <div class="col-6 d-flex justify-content-start">
+
+                            <h3 class="m-0 pt-2 text-white">Email</h3>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end align-items-center">
+
+                            <i class="fab fa-envelope fa-2x text-secondary"></i>
+                        </div>
+
+                    </div>
+                </div>
+
+
             </div>
 
         </div>
 
     </div>
-    
 </body>
+
 </html>
