--- a/calculator.html
+++ b/calculator.html
@@ -4,57 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="calculator.css
-    ">
+
+    <link rel="stylesheet" href="calculator.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
+
+    <title>A simple calculator</title>
 </head>
 
 <body>
 
-    <div class="wrapper">
+   <div id="container">
 
-        <div class="container">
+    <div id="calculator">
 
-            <h1>Calculator</h1>
+        <div id="result">
 
-            <div class="row">
-                
-                <input type="text" name="result" class="result" id="result" value="" placeholder="Result" readonly />
-
-                <input type="button" value="+" onclick="setScreenValue('+')" />
-                <input type="button" value="1" onclick="setScreenValue('1')" />
-                <input type="button" value="2" onclick="setScreenValue('2')" />
-                <input type="button" value="3" onclick="setScreenValue('3')" />
-                <input type="button" value="-" onclick="setScreenValue('-')" />
+            <div id="history">
+                <p id="history-value"></p>
             </div>
-
-            <div class="row">
-                <input type="button" value="4" onclick="setScreenValue('4')" />
-                <input type="button" value="5" onclick="setScreenValue('5')" />
-                <input type="button" value="6" onclick="setScreenValue('6')" />
-                <input type="button" value="x" onclick="setScreenValue('*')" />
-            </div>
-
-            <div class="row">
-                <input type="button" value="7" onclick="setScreenValue('7')" />
-                <input type="button" value="8" onclick="setScreenValue('8')" />
-                <input type="button" value="9" onclick="setScreenValue('9')" />
-                <input type="button" value="/" onclick="setScreenValue('/')" />
-            </div>
-
-            <div class="row">
-                <input type="button" value="%" onclick="setScreenValue('%')" />
-                <input type="button" value="0" onclick="setScreenValue('0')" />
-                <input type="button" value="." class="dot" onclick="setScreenValue('.')" />
-                <input type="button" value="=" onclick="calculateResult()" />
-            </div>
-
-            <div class="row">
-                <input type="button" value="CLEAR" onclick="clearScreen()" id="clear" class="clear-button" />
+            <div id="output">
+                <p id="output-value"></p>
             </div>
 
         </div>
+
     </div>
+
+
+    <div id="keyboard">
+        <button class="operator" id="clear">C</button>
+        <button class="operator" id="backspace">CE</button>
+        <button class="operator" id="%">%</button>
+        <button class="operator" id="/">&#247;</button>
+        <button class="number" id="7">7</button>
+        <button class="number" id="8">8</button>
+        <button class="number" id="9">9</button>
+        <button class="operator" id="*">&times;</button>
+        <button class="number" id="4">4</button>
+        <button class="number" id="5">5</button>
+        <button class="number" id="6">6</button>
+        <button class="operator" id="-">-</button>
+        <button class="number" id="1">1</button>
+        <button class="number" id="2">2</button>
+        <button class="number" id="3">3</button>
+        <button class="operator" id="+">+</button>
+        <button class="empty" id="empty"></button>
+        <button class="number" id="0">0</button>
+        <button class="empty" id="empty"></button>
+        <button class="operator" id="=">=</button>
+    </div>
+
+   </div> 
     
 </body>
-
 </html>
